[package]
name = "anonymouse"
version = "0.1.0"
authors = ["Daniel Ginsburg <dginsburg@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow = "1"
esp32-nimble = "0.6"
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
hid_tools = { git = "https://github.com/daniel-dbg-ginsburg/hid_tools.git", version = "0.1.0" }
rand = "0.8.5"

[build-dependencies]
embuild = "0.31"
